fix brand logo on small vertical display

--- a/src/style/grid.sass
+++ b/src/style/grid.sass
@@ -19,7 +19,7 @@
     width: 150px;
     height: 100%;
     display: grid;
-    grid-template: 7% / repeat(6, 16.6%);
+    grid-template: 2.5em / repeat(6, 16.6%);
 
 .grid-sidebar-mini
     position: fixed;
